tests/api/reference/negative/14-tokens-of-type.asm
const invalid: list = tokens.of(42)
